--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -363,7 +363,10 @@
         [G:H] = |G/H|
     \end{equation*}
     \item If $|G|<\infty$, then $[G:H]=|G|/|H|$. If $|G|=\infty$, then we can still define the concept $|G/H|$, but we don't have a nice formula for it.
-    \item Example: Let $G=\Z$ and $H=2\Z$ (i.e., $H$ is the set of even integers). Then the orbits are all even and all odd nunbers. The index is 2??
+    \item Example: Let $G=\Z$ and $H=2\Z$ (i.e., $H$ is the set of even integers).
+    \begin{itemize}
+        \item Then the orbits are all even and all odd numbers. The index of $H$ in $G$ is 2.
+    \end{itemize}
     \item Theorem (Lagrange):
     \begin{enumerate}
         \item Let $G$ be a finite group, $H\subset G$. Then $|H|$ divides $|G|$.
@@ -407,7 +410,7 @@
             \end{pNiceArray}
         \end{equation*}
     \end{itemize}
-    \item \textbf{Dihedral group}: The subgroup of $\text{O}(2)$ consisting of elements which preserve the regular $n$-gon ($n\geq 3$) centered at the origin. \emph{Denoted by} $D_{2n}$.
+    \item \textbf{Dihedral group}: The subgroup of $\text{O}(2)$ consisting of elements which preserve the regular $n$-gon ($n\geq 3$) centered at the origin. \emph{Denoted by} $\bm{D_{2n}}$.
     \item We can study $D_{2n}\subset S_n$ by labeling the vertices of the $n$-gon from 1 through $n$.
     \begin{itemize}
         \item Similarly to in the cube group, any two nonopposite vertices are linearly independent, and the transformation is uniquely determined by any two such vertices.
