Problem Set 6 (Questions)

--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -38,6 +38,9 @@
 \subfile{PSet5/pset5.tex}
 \newpage
 
+\subfile{PSet6/pset6.tex}
+\newpage
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
