--- a/preamble.tex
+++ b/preamble.tex
@@ -86,6 +86,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\F}{\mathbb{F}}
+\newcommand{\HH}{\mathbb{H}}
 
 \newcommand{\inp}[2]{\left\langle{#1},{#2}\right\rangle}
 \newcommand{\gen}[1]{\left\langle{#1}\right\rangle}
